(executables
    (names Hello Autocomplete Flexbox Border Boxshadow DefaultButton Hackernews)
    (preprocess (pps lwt_ppx))
    (package Revery)
    (public_names Hello Autocomplete Flexbox Border Boxshadow DefaultButton Hackernews)
    (js_of_ocaml)
    (libraries
        js_of_ocaml
        str
        Revery
        flex
        cohttp 
        cohttp-lwt-unix
        yojson
            ))
(install
    (section bin)
    (package Revery)
    (files Roboto-Regular.ttf Roboto-Bold.ttf binary.dat index.html Hello.bc.js gl-matrix-min.js outrun-logo.png))
