(executables
    (names Hackernews)
    (preprocess (pps lwt_ppx))
    (package Revery)
    (public_names Hackernews)
    (js_of_ocaml)
    (libraries
        js_of_ocaml
        str
        Revery
        flex
        async
        cohttp 
        cohttp-lwt-unix
        cohttp-async
        yojson
            ))
(install
    (section bin)
    (package Revery)
    (files Roboto-Bold.ttf))
